--- a/moinda-api/src/main/resources/templates/meeting/meetingDetail.html
+++ b/moinda-api/src/main/resources/templates/meeting/meetingDetail.html
@@ -20,14 +20,14 @@
                 <ul id="messageArea">
                 </ul>
 <!--                클릭으로 변경-->
-                <form id="messageForm" name="messageForm">
+                <div id="messageForm" name="messageForm">
                     <div class="form-group">
                         <div class="input-group clearfix">
                             <input type="text" id="message" autocomplete="off" class="form-control"/>
-                            <button type="submit" class="primary">보내기</button>
+                            <button type="button" class="primary" id="sendMessage">보내기</button>
                         </div>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
 
@@ -131,7 +131,6 @@
                         formattedStartAt =
                             `${startAt.getMonth() + 1}월 ${startAt.getDate()}일 (${dayOfWeek})
                             ${startAt.getHours()}:${startAt.getMinutes() < 10 ? '0' + startAt.getMinutes(): startAt.getMinutes()}`;
-
                         // 응답 데이터를 처리하는 코드 작성
                         const body = `
                         <div name="meetingBody"
@@ -142,10 +141,10 @@
                                 font-size: smaller;
                                 ">
                                 <div style="margin: 10px 0px;" id="meeting" value="${meeting.meetingId}">
-                                    ${makeBody("모임 이름", meeting.name)}
-                                    ${makeBody("주소", meeting.primaryAddress)}
-                                    ${makeBody("장소명", meeting.placeName)}
-                                    ${makeBody("날짜", formattedStartAt)}
+                                    ${makeBody('<i class="bi bi-megaphone"></i>', meeting.name)}
+                                    ${makeBody('<i class="bi bi-map"></i>', meeting.primaryAddress)}
+                                    ${makeBody('<i class="bi bi-geo-alt"></i>', meeting.placeName)}
+                                    ${makeBody('<i class="bi bi-calendar-check"></i>', formattedStartAt)}
                                     <div class="text-white font-weight-bold"
                                         style="opacity: 0.8;"> 참여 인원 ( ${meeting.numOfParticipants} / ${meeting.capacity} )  </div>
                                 </div>
@@ -202,12 +201,14 @@
                             console.log(members)
                             const participantsCount = members.length
 
-                            const subTitle = `<div style='
-                                text-align: center;
-                                color: white;
-                                font-size: larger;
-                                opacity: 0.7;'
-                                class="participantTitle">전체참여 목록</div>`
+                            const subTitle =
+                                `<div style='
+                                    text-align: center;
+                                    color: white;
+                                    opacity: 0.7;'
+                                    class="participantTitle">
+                                        전체참여 멤버
+                                    </div>`
 
                             const meetingDateTitle =
                                 `<div class="text-white font-weight-bold"
@@ -228,7 +229,6 @@
                                             <img src="/img/user/anonymous.png" style="max-width: 50px;" >
                                         </div>
                                         <div style="padding: 3px;" name="userDetail">
-                                            <!-- TODO : 본인일 경우 표시를 할 수 도 있다.-->
                                             <div class="text-white font-weight-bold active-ellipisis-max-width30vh">
                                                 ${member.name}
                                             </div>
@@ -340,6 +340,7 @@
                 const connectingElement = document.querySelector('.connecting');
                 const mainDisplayContainer = document.querySelector(".masthead")
                 const closeChattingBtn = document.querySelector("#closeChatting")
+                const sendMessageBtn = document.querySelector("#sendMessage")
 
                 // 채팅방 모달 활성화시 이외 화면 클릭하면 hidden
                 window.onclick = (e) => {
@@ -356,8 +357,7 @@
                     chattingBtn.addEventListener("click", connect)
                 }
                 // 메세지 전송 이벤트 적용
-                // TODO : submit 대신 다른 타입으로 변경해서 사용하게 변경.
-                messageForm.addEventListener('submit', sendMessage, true)
+                sendMessageBtn.addEventListener('click', sendMessage, true)
 
                 let stompClient = null;
 
@@ -525,8 +525,10 @@
                                     <div name="context" style="flex: 1;">
                                         ${chat.context}
                                     </div>
-                                    <div name="writeAt" style="align-self: self-end;
-                                                            opacity: 0.7;">
+                                    <div name="writeAt"
+                                        style="align-self: self-end;
+                                                opacity: 0.7;
+                                                font-size: smaller;">
                                         ${formatDateToMessage(chat.writeAt)}
                                     </div>
                                 </div>
