--- a/moinda-api/src/main/resources/templates/meeting/meetings.html
+++ b/moinda-api/src/main/resources/templates/meeting/meetings.html
@@ -94,10 +94,10 @@
                                 align-items: center;
                                 font-size: smaller;">
                                     <div style="flex: 1" name="meetingInfo" value="${meeting.meetingId}">
-                                        ${makeBody("모임 이름", meeting.name)}
-                                        ${makeBody("주소", meeting.primaryAddress)}
-                                        ${makeBody("장소명", meeting.placeName)}
-                                        ${makeBody("날짜", formattedStartAt)}
+                                        ${makeBody('<i class="bi bi-megaphone"></i>', meeting.name)}
+                                        ${makeBody('<i class="bi bi-map"></i>', meeting.primaryAddress)}
+                                        ${makeBody('<i class="bi bi-geo-alt"></i>', meeting.placeName)}
+                                        ${makeBody('<i class="bi bi-calendar-check"></i>', formattedStartAt)}
                                         <div class="text-white font-weight-bold"
                                         style="opacity: 0.8;"> 참여 인원 ( ${meeting.numOfParticipants} / ${meeting.capacity} )  </div>
                                     </div>
