--- a/moinda-api/src/main/resources/templates/meeting/register.html
+++ b/moinda-api/src/main/resources/templates/meeting/register.html
@@ -40,11 +40,26 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container px-4 px-lg-5 h-75">
-<!--                높이 변경 h-25 -->
-                <div class="row gx-4 gx-lg-5 h-25 align-items-center justify-content-center">
-                    <div class="col-lg-8 col-xl-6 text-center">
-                        <h3 class="text-white font-weight-bold">Let's Make Mo Gak Ko!</h3>
-                        <hr class="divider" />
+                <div class="row gx-4 gx-lg-5 h-20 align-items-center justify-content-center">
+                    <div class="col-lg-8 col-xl-6 text-center"
+                         style="display: flex;
+                                font-size: x-large;
+                                color: white;
+                                align-items: center;">
+                        <div style="text-align: left;
+                                    padding: 0px 10px;"
+                             id="toBack">
+                            <i class="bi bi-arrow-counterclockwise"></i>
+                        </div>
+                        <h3 class="text-white font-weight-bold"
+                            style="flex: 1;
+                                    padding-right: 30px;
+                                    margin-bottom: 0px;">
+                            Let's Make Mo Gak Ko!
+                        </h3>
+                    </div>
+                    <div style="display: block;">
+                        <hr class="divider">
                     </div>
                 </div>
                 <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
@@ -137,6 +152,9 @@
                 const startTime = document.querySelector("input[id='startTime']")
                 const endDate = document.querySelector("input[id='endDate']")
                 const endTime = document.querySelector("input[id='endTime']")
+
+                const backBtn = document.querySelector("#toBack")
+                backBtn.addEventListener("click", toBack)
 
                 createButton.addEventListener("click", createMeeting)
                 cancelButton.addEventListener("click", () => {
