--- a/moinda-api/src/main/resources/templates/signup.html
+++ b/moinda-api/src/main/resources/templates/signup.html
@@ -7,10 +7,26 @@
         <!-- Masthead-->
         <header class="masthead" style="height: 100%">
             <div class="container px-4 px-lg-5 h-75">
-                <div class="row gx-4 gx-lg-5 h-50 align-items-center justify-content-center">
-                    <div class="col-lg-8 col-xl-6 text-center">
-                        <h3 class="text-white font-weight-bold">Let's Sign Up!</h3>
-                        <hr class="divider" />
+                <div class="row gx-4 gx-lg-5 justify-content-center" style="height: 40%;">
+                    <div class="col-lg-8 col-xl-6 text-center"
+                         style="display: flex;
+                                font-size: x-large;
+                                color: white;
+                                align-items: center;">
+                        <div style="text-align: left;
+                                    padding: 0px 10px;"
+                             id="toBack">
+                            <i class="bi bi-arrow-counterclockwise"></i>
+                        </div>
+                        <h3 class="text-white font-weight-bold"
+                            style="flex: 1;
+                                    padding-right: 30px;
+                                    margin-bottom: 0px;">
+                            Let's Sign Up!
+                        </h3>
+                    </div>
+                    <div style="display: block;">
+                        <hr class="divider">
                     </div>
                 </div>
                 <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
@@ -55,7 +71,8 @@
                 const introduce = document.querySelector("#introduce")
                 const signUpButton = document.querySelector("#signup")
 
-
+                const backBtn = document.querySelector("#toBack")
+                backBtn.addEventListener("click", toBack)
 
                 signUpButton.addEventListener("click", () => {
 
